This file documents the revision history for the SNClient agent.

next:
         - check_service: fix case insensitive excludes
         - check_pagefile: fix crash if there is no pagefile
         - update windows exporter to 0.30.5
         - update node exporter to 1.9.0
         - check_dns: fix crash without any nameserver

0.32     Thu Mar 13 12:55:24 CET 2025
         - add alpine support
         - fix check_process when empty-state is set to OK
         - change like operator to be case insensitive
         - add new slike operator which is case sensitive
         - add support for str() operator
         - check_process: make process filter case insensitive
         - check_service: make service filter case insensitive
         - managed exporter: passthrough all urls, not just /metrics
         - add 'snclient config check' command

0.31     Wed Feb 12 18:14:54 CET 2025
         - fix check_files thresholds on total_size
         - update windows exporter to 0.30.2
         - chore: update dependencies
         - change minimum golang requirement to 1.23

0.30     Wed Jan 15 12:08:28 CET 2025
         - fix check_drivesize letter: excludes
         - fix check_service default threshold for linux
         - chore: update dependencies

0.29     Thu Nov 14 16:35:10 CET 2024
         - fix vbs wrapper in default config (#170)
         - fix empty performance data when using perf-config units
         - fix fix process state filter on windows (#169)
         - show error if shared ports use different ssl configuration

0.28     Mon Oct 21 23:08:47 CEST 2024
         - update windows exporter to 0.29.1
         - wmi: always set en_US language in query (#156)
         - check_eventlog: fix time offset parsing (#157)
         - add /api/v1/inventory/{module} rest endpoint to get specific inventory
         - add exporter to inventory list
         - fix updates from custom urls (#159)
         - add /api/v1/admin/updates/install endpoint to trigger update