@@ -6,6 +6,7 @@ next:
          - update windows exporter to 0.30.5
          - update node exporter to 1.9.0
          - check_dns: fix crash without any nameserver
+         - fix timeout race condition when rebooting windows service
 
 0.32     Thu Mar 13 12:55:24 CET 2025
          - add alpine support
